# coucouci

./: .gitignore  README.md  coucouci.cabal  coucouci.yaml  github.json  stack.yaml
src/: Cli.hs  Hook.hs  Main.hs  MemoryChan.hs  Run.hs  Types.hs  WSClient.hs
