name:                coucouci
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/coucouci#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable coucouci
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Types
                     , Hook
                     , Run
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , text
                     , yaml
                     , aeson
                     , lens-aeson
                     , lens
                     , async
                     , typed-process
                     , unordered-containers
                     , servant
                     , servant-server
                     , wai
                     , warp
                     , mtl
